# CameraApp

./: README.md
client/: CMakeLists.txt
client/src/: main.cpp
server/src/: main.cpp
